--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,27 +1,41 @@
 pipeline {
-    agent any
-    environment {
-	SERVICE = "final"	
-	REPONAME = "forK8S"
-	DOCKERHUM_USERNAME = "sherwan123"
-	IMAGE_TAG = "${DOCKERHUB_USERNAME}/${forK8S}:${BUILD_NUMBER}"
+  environment {
+    imagename = "yenigul/hacicenkins"
+    registryCredential = 'yenigul-dockerhub'
+    dockerImage = ''
+  }
+  agent any
+  stages {
+    stage('Cloning Git') {
+      steps {
+        git([url: 'https://github.com/ismailyenigul/hacicenkins.git', branch: 'master', credentialsId: 'ismailyenigul-github-user-token'])
 
-}
-    stages {
-        stage('Build and push the image') {
-            steps {
-                withDockerRegistry
-            }
-        }
-        stage('Test') {
-            steps {
-                echo 'Testing..'
-            }
-        }
-        stage('Deploy') {
-            steps {
-                echo 'Deploying....'
-            }
-        }
+      }
     }
+    stage('Building image') {
+      steps{
+        script {
+          dockerImage = docker.build imagename
+        }
+      }
+    }
+    stage('Deploy Image') {
+      steps{
+        script {
+          docker.withRegistry( '', registryCredential ) {
+            dockerImage.push("$BUILD_NUMBER")
+             dockerImage.push('latest')
+
+          }
+        }
+      }
+    }
+    stage('Remove Unused docker image') {
+      steps{
+        sh "docker rmi $imagename:$BUILD_NUMBER"
+         sh "docker rmi $imagename:latest"
+
+      }
+    }
+  }
 }
